Add mobile application qualified id to app open event
Change-Id: I70d518ab4667810b3a9a043a8c63f84a18c3670a
Bug: 357835538
Test: unit tests
Flag: com.android.appsearch.flags.app_open_event_indexer_enabled